# POS-Semestralna-praca

./: PouzivatelskaDokumentacia.docx  ProgramatorskaDokumentacia.docx  README.md
SemestralnaPracaKlient/: CMakeLists.txt  MemoryLeak.h  main.cpp  my_socket.cpp  my_socket.h
SemestralnaPracaKlient/connect4/: Connect4.cpp  Connect4.h
SemestralnaPracaKlient/connect4/structures/: Hra.cpp  Hra.h  ThreadData.cpp  ThreadData.h
SemestralnaPracaServer/: CMakeLists.txt  Makefile  main.c
SemestralnaPracaServer/connect4/: connect4.c  connect4.h
SemestralnaPracaServer/connect4/structures/: hra.c  hra.h  thread_data.c  thread_data.h
SemestralnaPracaServer/pos_sockets/: active_socket.c  active_socket.h
